traefik/dashboard/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: traefik.juny.me
      http:
        paths:
          - backend:
              service:
                name: traefik-dashboard-metrics
                port:
                  number: 9100
            path: /metrics
            pathType: Prefix
          # - backend:
          #     service:
          #       name: traefik-dashboard
          #       port:
          #         number: 9000
          #   path: /
          #   pathType: Prefix
  tls:
    - hosts:
        - traefik.juny.me
      secretName: traefik-dashboard-tls
